--- a/styles/boggle-container.css
+++ b/styles/boggle-container.css
@@ -16,6 +16,7 @@
 
 	/* text-align: center; */
 }
+
 .row {
 	min-width: 335px;
 	display: flex;
@@ -35,14 +36,28 @@
 	box-shadow: rgba(0, 0, 0, 0.17) 0px -3px 5px 5px inset, rgba(0, 0, 0, 0.15) 0px -6px 8px 5px inset,
 		rgba(0, 0, 0, 0.1) 0px -20px 20px 0px inset;
 }
+
+.tile-flip {
+	animation: tileflip 1s ease-in forwards;
+}
 .tile-button:disabled {
 	opacity: 0.5;
 }
-
+.appear-empty {
+	background-color: var(--medium-blue);
+}
 .tile-button:hover {
 	background-color: var(--yellow);
 }
 .selected {
 	background-color: var(--orange);
 	opacity: 1;
+}
+@keyframes tileflip {
+	0% {
+		transform: rotateY(90deg);
+	}
+	100% {
+		transform: rotateY(0deg);
+	}
 }
