--- a/styles/loading-page.css
+++ b/styles/loading-page.css
@@ -7,7 +7,7 @@
 	background-color: rgba(0, 0, 0, 1);
 	opacity: 1;
 	visibility: visible;
-	transition: visibility 4s linear 1s, opacity 2s linear 3s;
+	transition: visibility 4s linear, opacity 2s linear;
 	/* transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s; */
 }
 .loading-animation {
