--- a/styles/loading-page.css
+++ b/styles/loading-page.css
@@ -4,36 +4,49 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 1);
+	background-color: rgba(24, 32, 37, 1);
 	opacity: 1;
 	visibility: visible;
 	/* transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s; */
 }
 .loading-text {
-	position: absolute;
+	font-size: 1.3rem;
+	line-height: 0;
+	letter-spacing: 0.2rem;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	color: var(--light-grey);
+	margin: 0 auto;
 }
 .loading-animation {
+	margin: 0 auto;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
 .remove-loading-page {
-	animation: loading-fadeout 5s ease-in;
+	animation: loading-fadeout 4s ease;
+}
+canvas {
+	border-radius: 10px;
+	box-shadow: rgba(24, 32, 37, 0.9) 0px 0px 5px 5px, rgba(130, 192, 204, 0.4) 0px 0px 40px 10px;
 }
 @keyframes loading-fadeout {
 	0% {
 		opacity: 1;
 	}
-	50% {
+	60% {
+		transform: translateY(0);
+	}
+	70% {
 		opacity: 1;
+		transform: translateY(20px);
 	}
 	100% {
 		opacity: 0;
+		transform: translateY(-1000px);
 	}
 }
