--- a/styles/loading-page.css
+++ b/styles/loading-page.css
@@ -33,6 +33,8 @@
 canvas {
 	border-radius: 10px;
 	box-shadow: rgba(24, 32, 37, 0.9) 0px 0px 5px 5px, rgba(130, 192, 204, 0.4) 0px 0px 40px 10px;
+	animation: canvas-vibration 2s linear infinite;
+	animation-direction: alternate;
 }
 @keyframes loading-fadeout {
 	0% {
@@ -43,10 +45,66 @@ canvas {
 	}
 	70% {
 		opacity: 1;
+		background-color: rgba(24, 32, 37, 1);
 		transform: translateY(20px);
 	}
 	100% {
-		opacity: 0;
+		opacity: 1;
+		/* background-color: transparent; */
 		transform: translateY(-1000px);
 	}
 }
+
+@keyframes canvas-vibration {
+	0% {
+		transform: translate(1px, 1px) rotate(0deg);
+	}
+	10% {
+		transform: translate(-1px, -2px) rotate(-2deg);
+	}
+	20% {
+		transform: translate(-3px, 0px) rotate(2deg);
+	}
+	30% {
+		transform: translate(3px, 2px) rotate(0deg);
+	}
+	40% {
+		transform: translate(1px, -1px) rotate(2deg);
+	}
+	50% {
+		transform: translate(-1px, 2px) rotate(-2deg);
+	}
+	60% {
+		transform: translate(-3px, 1px) rotate(0deg);
+	}
+	70% {
+		transform: translate(3px, 1px) rotate(-2deg);
+	}
+	80% {
+		transform: translate(-1px, -1px) rotate(2deg);
+	}
+	90% {
+		transform: translate(1px, 2px) rotate(0deg);
+	}
+	100% {
+		transform: translate(1px, -2px) rotate(-2deg);
+	}
+}
+
+/* @keyframes floating {
+	0% {
+		transform: translateX(-10px) translateY(0);
+	}
+	25% {
+		transform: translateX(0px) translateY(-10px);
+	}
+	50% {
+		transform: translateX(10px) translateY(0);
+	}
+	75% {
+		transform: translateX(0px) translateY(10px);
+	}
+	100% {
+		transform: translateX(-10px) translateY(0);
+	}
+} */
