--- a/styles/boggle-container.css
+++ b/styles/boggle-container.css
@@ -25,8 +25,13 @@
 	align-items: center;
 }
 .tile-button {
-	min-width: 80px;
-	min-height: 80px;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 80px;
+	height: 80px;
 	background-color: var(--light-grey);
 	color: var(--very-dark-blue);
 	border: 1px solid var(--light-blue);
@@ -35,6 +40,18 @@
 	font-family: 'Merriweather', serif;
 	box-shadow: rgba(0, 0, 0, 0.17) 0px -3px 5px 5px inset, rgba(0, 0, 0, 0.15) 0px -6px 8px 5px inset,
 		rgba(0, 0, 0, 0.1) 0px -20px 20px 0px inset;
+}
+.tile-letter {
+	margin: 0;
+	line-height: 0;
+}
+.tile-score {
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	right: 10px;
+	top: 6px;
+	font-size: 0.7rem;
 }
 .vibrate {
 	animation: vibration 0.5s ease-in;
