--- a/styles/main.css
+++ b/styles/main.css
@@ -61,7 +61,7 @@ h1 {
 	justify-content: flex-start;
 	align-items: center;
 	min-width: 160px;
-	margin: 0 50px;
+	margin: 0 10px 0 50px;
 }
 #guessed-words-div {
 	display: flex;
@@ -105,7 +105,36 @@ h5 {
 	text-align: center;
 	overflow: auto;
 }
-
+#high-score-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: center;
+	min-width: 160px;
+	height: 445px;
+	margin: 0;
+}
+#high-score-div {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	min-width: 120px;
+	padding: 0;
+	height: 80px;
+	background-color: var(--yellow);
+	border-radius: 20px;
+	margin: 0;
+}
+#high-score-number {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 10px;
+	font-size: 1.5rem;
+	font-weight: 800;
+}
 #current-letters-holder {
 	background-color: var(--light-grey);
 	width: 375px;
