--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,19 +1,34 @@
 #menu-buttons-div {
 	position: relative;
-	margin: 30px auto;
+	margin: 40px auto;
 	display: flex;
 	flex-direction: flex-row;
 	justify-content: space-evenly;
 }
+.player-selection {
+	display: absolute;
+	top: 0;
+	width: 250px;
+	color: var(--light-grey);
+	align-self: end;
+	justify-self: start;
+	text-align: right;
+	padding: 10px 20px;
+}
+.player-selection p {
+	font-size: 0.7rem;
+}
 select {
+	background-color: var(--light-grey);
 	display: inline-block;
-	margin: 0 30px;
+	margin: 0 auto;
 	border: none;
-	letter-spacing: 0.2rem;
+	letter-spacing: 0.1rem;
 	font-weight: 400;
 	border-radius: 10px;
 	padding: 5px 10px;
-	height: 40px;
+	height: 25px;
+	font-size: 0.7rem;
 }
 select:focus {
 	outline: none;
