--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@
 body {
 	user-select: none;
 	margin: 0 auto;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -24,11 +25,12 @@ body {
 }
 header {
 	width: 100%;
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
-	padding: 50px 0 30px 0;
+	padding: 0 0 30px 0;
 	background-color: rgba(24, 32, 37, 0.9);
 	margin: 0 0 50px 0;
 	box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 40px 10px;
