--- a/styles/multiplayer.css
+++ b/styles/multiplayer.css
@@ -16,18 +16,19 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	padding: 30px 10px;
-	width: 300px;
+	width: 350px;
+	height: 200px;
 	border-radius: 0.5rem;
-	background-color: white;
+	background-color: var(--yellow);
 	text-align: justify;
 	display: flex;
-	font-size: 1.3rem;
+	font-size: 1.5rem;
 	justify-content: center;
 	align-items: center;
 }
 .show-countdown {
 	opacity: 1;
 	visibility: visible;
-	transform: scale(1.0);
+	transform: scale(1.1);
 	transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
